Fix alignments of buttons.
RT #380

--- a/frontend/src/components/shared/popUps/organizationModal/organizationModal.scss
+++ b/frontend/src/components/shared/popUps/organizationModal/organizationModal.scss
@@ -128,9 +128,10 @@
     }
   }
   .MuiDialogActions-root {
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 2px;
     margin-bottom: 8px;
+    padding: 20px 35px;
     .cancel-btn {
       background: #efe1ff;
       color: #773cbd;
